--- a/AppBolivar/Src/Atencion Cliente Citas.fx.yaml
+++ b/AppBolivar/Src/Atencion Cliente Citas.fx.yaml
@@ -400,7 +400,8 @@
                 ) = Text(
                     Today(),
                     "dd/mm/yyyy"
-                )
+                ),
+                id_sede = _varSede.id
             )
             // id_especialidad_x_sede = LookUp('public.Medical_Center_S&E_Relacion'; id_sede = _varSede.id).id
         Layout: =Layout.Vertical
@@ -3468,7 +3469,8 @@
                             Doctor: dpEstadoCivil_DCA_20.Selected.correo,
                             Nacionalidad: dpEstadoCivil_DCA_17.Selected.Value,
                             id_especialidad_x_sede:dpEspecialidadNewAppointment.Selected.id,//refiere al id de la relacion
-                            fecha_creacion:Now()
+                            fecha_creacion:Now(),
+                            id_sede: dpEspecialidadNewAppointment.Selected.id_sede
                         }
                     ),
                     Patch(
