--- a/AppBolivar/Src/Consulta Medica Dashboard.fx.yaml
+++ b/AppBolivar/Src/Consulta Medica Dashboard.fx.yaml
@@ -86,7 +86,7 @@
         Height: =377
         Items: |-
             =Filter(AddColumns(If(
-                LookUp('public.Medical_Center_Consultorio_Medico',id_sede = _varSede.id,triaje) = true,
+                LookUp('public.Medical_Center_Consultorio_Medico',id_sede = _varSede.id,triaje) = true || false,
                 SortByColumns(
                     Filter(
                         'public.Medical_Center_Counter',
@@ -107,7 +107,7 @@
                             etapa = "Atención Medica"
                         ),
                         fecha_texto=Text(Today(),"yymmdd"),
-                        usuario = User().Email
+                       usuario = User().Email
                     ),
                     "fecha",
                     SortOrder.Ascending
@@ -129,7 +129,7 @@
                             etapa = "Atención Medica"
                         ),
                         fecha_texto=Text(Today(),"yymmdd"),
-                        usuario = User().Email
+                        usuario = User().Email  
                     ),
                     "fecha",
                     SortOrder.Ascending
@@ -189,6 +189,7 @@
                     Now()
                 );
                 Set(_varPregunta,true);
+                Reset(EvidenciasTextSearchBox_9);Reset(EvidenciasTextSearchBox_8);
             RadiusBottomLeft: =8
             RadiusBottomRight: =8
             RadiusTopLeft: =8
