--- a/AppBolivar/Src/Caja.fx.yaml
+++ b/AppBolivar/Src/Caja.fx.yaml
@@ -519,7 +519,7 @@ Caja As screen:
                 );
                 
                 Set(CajaSelected,gal_Paciente_Dashboard_Caja.Selected);
-                UpdateContext({_varCaja:true})
+                UpdateContext({_varCaja:true});
             RadiusBottomLeft: =8
             RadiusBottomRight: =8
             RadiusTopLeft: =8
