--- a/AppBolivar/Src/scHistoriaMedica.fx.yaml
+++ b/AppBolivar/Src/scHistoriaMedica.fx.yaml
@@ -8115,7 +8115,7 @@ scHistoriaMedica As screen:
                                         Height: =Switch(ThisItem.tipo_respuesta,"textoLinea",36,"textoMul",72)
                                         Mode: =Switch(ThisItem.tipo_respuesta,"textoLinea",TextMode.SingleLine,"textoMul",TextMode.MultiLine)
                                         OnChange: |-
-                                            =Patch(formularioCamposLineales,LookUp(formularioCamposLineales,itemID=ThisItem.itemID),{respuestaTexto:Upper(Trim(Self.Text))})
+                                            =Patch(formularioCamposLineales,LookUp(formularioCamposLineales,itemID=ThisItem.itemID),{respuestaTexto: Trim(Self.Text)})
                                         RadiusBottomLeft: =4
                                         RadiusBottomRight: =4
                                         RadiusTopLeft: =4
@@ -12763,34 +12763,7 @@ scHistoriaMedica As screen:
                         Height: =36
                         HoverBorderColor: =
                         HoverFill: =RGBA(255, 255, 255, 1)
-                        Items: |-
-                            =Filter(
-                                AddColumns(
-                                    AddColumns(
-                                        RenameColumns(
-                                            Filter(
-                                                'public.Medical_Center_Especialidad',
-                                                id_sede = _varSede.id
-                                            ),
-                                            "id",
-                                            "idEsp"
-                                        ),
-                                        "id_relacion",
-                                        LookUp(
-                                            'public.Medical_Center_S&E_Relacion',
-                                            id_sede = _varSede.id && id_especialidad = idEsp,
-                                            id
-                                        )
-                                    ),
-                                    "Atiende",
-                                    LookUp(
-                                        'public.Medical_Center_R&D_Relacion',
-                                        id_doctor = getUser.id && id_se_relacion = id_relacion,
-                                        estado
-                                    )
-                                ),
-                                Atiende = true
-                            )
+                        Items: =Filter(AddColumns(AddColumns(RenameColumns(Filter('public.Medical_Center_Especialidad',id_sede=_varSede.id),"id","idEsp"),"id_relacion",LookUp('public.Medical_Center_S&E_Relacion',id_sede=_varSede.id&&id_especialidad=idEsp,id)),"Atiende",LookUp('public.Medical_Center_R&D_Relacion',id_doctor=getUser.id&&id_se_relacion=id_relacion,estado)),Atiende= true )
                         Size: =12
                         Width: =Parent.Width-2*Self.X
                         X: =1
